Adds product pages

--- a/index.html
+++ b/index.html
@@ -57,76 +57,103 @@
 
       <section>
         <h2>Our products</h2>
-        <div class="container">
-          <div>
-            <h3>Freddie</h3>
-            <img src="./images/Freddie.JPEG" alt="Freddie" />
+        <div class="grid-container">
+          <div class="r">
+            <a class="product-link" href="/products/ringo.html">
+            <h3>Ringo</h3>
+            <img class="landscape" src="./images/Ringo1.jpg" alt="Ringo1" />
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime,
               ullam!
             </p>
-            <a class="add" href="form.html"
-              ><i class="fa-solid fa-cart-plus"></i
-            ></a>
           </div>
-          <div>
+          <div class="p">
+            <a class="product-link" href="/products/paul.html">
             <h3>Paul</h3>
-            <img src="./images/Paul.jpg" alt="Paul" />
+            <img src="./images/Paul1.jpg" alt="Paul" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
               assumenda?
             </p>
-            <a class="add" href="form.html"
-              ><i class="fa-solid fa-cart-plus"></i
-            ></a>
+            </a>
           </div>
 
-          <div>
-            <h3>John</h3>
-            <img src="./images/John.JPEG" alt="John" />
+          <div class="j">
+            <a class="product-link" href="/products/john.html">
+              <h3>John</h3>
+              <img class="landscape" src="./images/John.JPEG" alt="John" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste,
+                harum?
+              </p>
+            </a>
+          </div>
+
+          <div class="bt">
+            <a class="product-link" href="/products/bedtable.html">
+            <h3>Bed table</h3>
+            <img src="./images/Bedtable1.JPEG" alt="Bedtable1" />
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste,
-              harum?
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime,
+              ullam!
             </p>
-            <a class="add" href="form.html"
-              ><i class="fa-solid fa-cart-plus"></i
-            ></a>
+           </a>
           </div>
 
-          <div>
+          <div class="cb">
+            <a class="product-link" href="/products/corkbox.html">
             <h3>Cork Wine Box</h3>
             <img src="./images/Corkbox.JPEG" alt="Cork box" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
               quae.
             </p>
-            <a class="add" href="form.html"
-              ><i class="fa-solid fa-cart-plus"></i
-            ></a>
+            </a>
           </div>
 
-          <div>
-            <h3>Bath Desk</h3>
-            <img src="./images/Bathdesk.JPEG" alt="Bath Desk" />
+          <div class="bd">
+            <a class="product-link" href="/products/bathtray.html">
+            <h3>Bath tray</h3>
+            <img src="./images/Bath Tray1.jpg" alt="Bath Tray1" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Repellendus, placeat!
             </p>
-            <a class="add" href="form.html"
-              ><i class="fa-solid fa-cart-plus"></i
-            ></a>
+            </a>
           </div>
 
-          <div>
-            <h3>Love Lamp</h3>
-            <img src="./images/Lamp.heic" alt="Love Lamp" />
+          <div class="ll">
+            <h3>Love lamp</h3>
+            <a class="product-link" href="/products/lovelamp.html">
+            <img src="./images/Lovelamp1.jpg" alt="Lovelamp1" />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
               quam!
             </p>
-            <a class="add" href="form.html"
-              ><i class="fa-solid fa-cart-plus"></i
-            ></a>
+            </a>
+          </div>
+
+          <div class="hl">
+            <a class="product-link" href="/products/lovelamp.html">
+            <h3>Hearts lamp</h3>
+            <a class="product-link" href="/products/heartslamp.html">
+            <img src="./images/Hearts-lamp1.jpg" alt="Hearts-lamp1" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+              quam!
+            </p>
+            </a>
+          </div>
+
+          <div class="wl">
+            <a class="product-link" href="/products/windowlamp.html">
+            <h3>Window lamp</h3>
+            <img src="./images/Window-lamp1.jpg" alt="Window-lamp1" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+              quam!
+            </p>
+            </a>
           </div>
         </div>
       </section>
@@ -134,10 +161,12 @@
 
     <footer id="footer">
       <div>
-        <p>Simpla Studio Art</p>
-        <p>Vila Nova de Gaia, Porto 4405-679, Portugal</p>
-        <a href="tel:+351915262545">Telephone:+351915262545</a>
-        <a href="mailto:ania@simplastudio.art">ania@simplastudio.art</a>
+        <p>
+          Simpla Studio Art &hearts; Vila Nova de Gaia, Porto 4405-679, Portugal
+          &hearts;
+          <a href="tel:+351915262545">Telephone:+351915262545</a> &hearts;
+          <a href="mailto:ania@simplastudio.art">ania@simplastudio.art</a>
+        </p>
       </div>
     </footer>
   </body>
