Adds functions to Your Cart

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simpla Studio</title>
+    <title>Simpla Studio Art</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -26,7 +26,7 @@
         <div class="container">
           <div>
             <h3>Ecological</h3>
-            <i class="fa-solid fa-tree"></i>
+            <i class="icon fa-solid fa-tree icon"></i>
 
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
@@ -36,7 +36,7 @@
           <div>
             <h3>Natural</h3>
 
-            <i class="fa-solid fa-leaf"></i>
+            <i class="fa-solid fa-leaf icon"></i>
 
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
@@ -46,7 +46,7 @@
 
           <div>
             <h3>Unique</h3>
-            <i class="fa-brands fa-gratipay"></i>
+            <i class="fa-brands fa-gratipay icon"></i>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. In,
               iure!
