--- a/products/john.html
+++ b/products/john.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simpla Studio - John</title>
     <link rel="stylesheet" href="../style.css" />
+    <script src="../javascripts/order.js"></script>
   </head>
   <body>
     <nav>
@@ -55,7 +56,7 @@
                 min="1"
                 max="5"
               />
-              <button>Order</button>
+              <button onclick="incrementOrder(`22222`)">Order</button>
             </div>
           </div>
         </div>
